--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@tabler/icons-react": "^3.24.0",
-    "next": "15.0.4",
+    "multer": "^1.4.5-lts.1",
+    "next": "^15.1.5",
     "nutecommerce": "file:",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
