--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@tabler/icons-react": "^3.24.0",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "^15.1.5",
     "nutecommerce": "file:",
@@ -19,6 +23,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
